--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/core": "^17.1.2",
     "@angular/forms": "^17.1.2",
     "@angular/material": "^17.1.2",
+    "@angular/animations": "^17.1.2",
     "@angular/platform-browser": "^17.1.2",
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
