--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "build-single-file": "ng build --configuration=allin1 && npx gulp",
+    "watch": "ng build --watch",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^17.1.2",
     "@angular/common": "^17.1.2",
     "@angular/compiler": "^17.1.2",
     "@angular/core": "^17.1.2",
     "@angular/forms": "^17.1.2",
     "@angular/material": "^17.1.2",
-    "@angular/animations": "^17.1.2",
     "@angular/platform-browser": "^17.1.2",
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
@@ -34,6 +35,9 @@
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.2",
     "@types/jasmine": "~5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-inline": "^0.1.3",
+    "gulp-base64-inline": "^1.0.6",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
