--- a/angular.json
+++ b/angular.json
@@ -52,8 +52,7 @@
               {"glob": "**/*", "ignore": ["data/*", "index.html"], "input": "./../input", "output": "./"}
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/primeng/resources/themes/lara-light-blue/theme.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -74,6 +73,14 @@
               "outputHashing": "all"
             },
             "allin1": {
+              "optimization": {
+                "fonts": false,
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false,
+                  "removeSpecialComments": true
+                }
+              },
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -115,8 +122,7 @@
               {"glob": "**/*", "input": "./input", "output": "./"}
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/primeng/resources/themes/lara-light-blue/theme.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
