--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/jasmine": "~5.1.0",
     "gulp": "^4.0.2",
     "gulp-inline": "^0.1.3",
-    "gulp-base64-inline": "^1.0.6",
+    "gulp-replace": "^1.1.4",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
