--- a/angular.json
+++ b/angular.json
@@ -52,7 +52,8 @@
               {"glob": "**/*", "ignore": ["data/*", "index.html"], "input": "./../input", "output": "./"}
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css"
             ],
             "scripts": []
           },
@@ -122,7 +123,8 @@
               {"glob": "**/*", "input": "./input", "output": "./"}
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css"
             ],
             "scripts": []
           }
